--- a/app/views/_cute_captcha_view.haml
+++ b/app/views/_cute_captcha_view.haml
@@ -1,13 +1,18 @@
 .loginItem
   %div{:class => ( @capcha_error < 1 ) ? 'alert-message warning message_width' : 'message_width alert-message error' }
-    = @usr_message
+    %h3
+      = @usr_message
+    %br
+
   - if ( @right_image )
     = hidden_field_tag( :right_one, @right_image.im_type )
     = hidden_field_tag( :try_count, @capcha_error )
-    %ul.media-grid
+    %ul.thumbnails
       - for an_image in @images_list
         %li
           %a.hit_link
-            %span
-              = radio_button_tag( "cucapcha_choice", an_image.id, false )
-            = image_tag an_image.avatar.url(:thumb), {:class => 'thumbnail', :style=>'vertical-align:midddle'}
+            .span2
+              .radio
+                = radio_button_tag( "cucapcha_choice", an_image.id, false )
+              .cc_thumb{:style=>'margin-left:15px;float:left;'}
+                = image_tag an_image.avatar.url(:thumb), {:class => 'thumbnail', :style=>'vertical-align:midddle'}
