--- a/app/views/_cute_captcha_view.haml
+++ b/app/views/_cute_captcha_view.haml
@@ -1,20 +1,20 @@
 .loginItem
   %div{:class => ( @capcha_error < 1 ) ? 'alert-message warning message_width' : 'message_width alert-message error' }
-    %h3
+    %h3.centered
       = @usr_message
     %br
 
   - if ( @right_image )
     = hidden_field_tag( :right_one, @right_image.im_type )
     = hidden_field_tag( :try_count, @capcha_error )
-    %ul.thumbnails
+    %ul.thumbnails{:style=>'margin-left:32px;'}
       - for an_image in @images_list
-        %li
+        %li{:style=>'margin-right:16px;'}
           %a.hit_link
             .span2
-              .rights
-                .cc_thumb
-                  = image_tag an_image.avatar.url(:thumb), {:class => 'thumbnail', :style=>'vertical-align:midddle'}
-              .rights
+              .lefts
                 .radio
                   = radio_button_tag( "cucapcha_choice", an_image.id, false )
+              .rights
+                .cc_thumb
+                  = image_tag an_image.avatar.url(:thumb), {:class => 'thumbnail', :style=>'vertical-align:midddle;width:92px;'}
